# automlops-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bkp  Readme.md  clear_database.py  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt
grafana/dashboards/: automlops-professional-dashboard-v2.json  dashboards.yml
grafana/datasources/: datasources.yml
src/: app.py
src/classes/: AutoML.py  Model.py
src/config/: settings.py
src/database/: config.py
src/database/models/: Alert.py  File.py  PerformanceLog.py  Result.py
src/middleware/: metrics_middleware.py
src/repositories/: model_repository.py
src/routers/: __init__.py  human_actions.py  models.py  monitoring.py  prediction.py  training.py
src/schemas/: common.py  monitoring.py  prediction.py  training.py
src/services/: alert_service.py  file_service.py  model_service.py  monitoring_service.py  performance_service.py  prediction_service.py  retraining_service.py  training_service.py
src/streaming/: kafka_handler.py
src/utils/: automatic_retraining.py  automl_handler.py  check_data_drift.py  converter.py  data_utils.py  data_validator.py  file_utils.py  monitoring_observer.py  observer_pattern.py  prediction_event_publisher.py
